# MegaClockGameWithTimeTravelling

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
.github/workflows/: cmake-multi-platform.yml
resources/scenes/: test.json
resources/tgui/forms/main menu/: main menu.txt
resources/tgui/forms/spinning box/: box test.txt
src/: Events.h  main.cpp
src/engine/: EngineDef.h  Events.h
src/engine/components/: ComponentDef.h  ComponentInterface.h  EmptyComponents.h
src/engine/components/Demo components/: GameComponent.cpp  GameComponent.h  WindowMovementController.cpp  WindowMovementController.h
src/engine/components/WindowControl/: WindowControlComponent.h  WindowController.cpp  WindowController.h
src/engine/game/: Game.cpp  Game.h  GameDef.h  GameObject.cpp  GameObject.h  GameProperties.h  Timer.cpp  Timer.h  WindowController
src/engine/game/resources/: Asset.h  ExtensionMap.cpp
src/engine/observers/: GameEvents.h  Observer.h  Subject.cpp  Subject.h
src/engine/resources/: ResourceSystem.cpp  Resources.cpp  Resources.h
src/engine/window/: GameWindow.cpp  GameWindow.h
src/game/: Game.cpp  Game.h  GameDef.h  GameObject.h  Keyboard.h  Player.cpp  Player.h  game.h
src/game/components/: ComponentInterface.h  Components.h  EmptyComponents.h  EmpyComponents.h  GameComponent.h  GraphicsComponent.h  InputComponent.h  PhysicsComponent.h  WindowControlComponent.h
src/game/components/Demo components/: GameComponent.h
src/game/observers/: GameEvents.h  GameObjectComponents.cpp  Observer.h  Subject.h
src/mcgwtt/: SettingsLoader.h  main.cpp
src/mcgwtt/box2dsfml/: Drawing.h
src/mcgwtt/components/: Box2dGraphics.cpp  Box2dGraphics.h  CameraComponents.h  DebugComponents.h  SystemComponents.h
src/mcgwtt/components/Box2d Test/: Memtest.h  Spinning box.h  World.h
src/mcgwtt/components/Demo components/: WindowMovementController.cpp  WindowMovementController.h
src/mcgwtt/components/Pong/: Paddle.h
src/mcgwtt/components/TGUI test/: MenuScreen.h
src/mcgwtt/components/WindowControl/: WindowController.cpp  WindowController.h
src/mcgwtt/components/camera/: CameraController.cpp  CameraController.h  ViewController.cpp  ViewController.h
src/mcgwtt/components/debug/: DebugCamera.cpp  DebugCamera.h  DebugGrid.cpp  DebugGrid.h
src/mcgwtt/components/game/: CameraController.h  GameWorld.h  Player.h  WindowController.h
src/mcgwtt/components/system/: GameWorld.cpp  GameWorld.h  WindowController.cpp  WindowController.h
src/mcgwtt/components/system/scenes/: LoadableComponents.h  Scene.cpp  Scene.h
src/mcgwtt/game/: BasicBody.cpp  BasicBody.h  CameraController.h  Cars.h  DebugGrid.h  GameWorld.h  Platform.h  Player.h  ViewController.h
src/mcgwtt/game/ContactListener/: ContactListener.cpp  ContactListener.h  ContactListenerAdder.cpp  ContactListenerAdder.h
src/mcgwtt/game/camera/: CameraController.h
src/mcgwtt/game/debug/: DebugCamera.h  DebugGrid.h
src/mcgwtt/game/rooms/: Room.cpp  Room.h
src/mcgwtt/settings loader/: SettingsLoader.cpp  SettingsLoader.h
src/window/: GameWindow.cpp  GameWindow.h
